--- a/public/index.html
+++ b/public/index.html
@@ -21,7 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <!-- Google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Unica+One|Barrio" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative|Unica+One|Abel|Russo+One" rel="stylesheet">
   
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
