Added skeleton code of CodeShowcase

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative
-|Unica+One|Cinzel|Russo+One|Julius+Sans+One|Quicksand|Pacifico|Anton" rel="stylesheet">
+|Unica+One|Cinzel|Russo+One|Julius+Sans+One|Quicksand|Pacifico|Anton|Didact+Gothic" rel="stylesheet">
   
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
