--- a/public/index.html
+++ b/public/index.html
@@ -23,7 +23,11 @@
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative
 |Unica+One|Cinzel|Russo+One|Julius+Sans+One|Quicksand|Pacifico|Anton|Didact+Gothic|Teko" rel="stylesheet">
-  
+
+  <!--Font awesome-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
+    integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
 <body>
   <noscript>You need to enable JavaScript to run this app.</noscript>
   <div id="root"></div>
