Changed splash screen

--- a/public/index.html
+++ b/public/index.html
@@ -22,7 +22,7 @@
     -->
   <!-- Google fonts -->
   <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative
-|Unica+One|Cinzel|Russo+One|Julius+Sans+One|Quicksand|Pacifico|Anton|Didact+Gothic|Teko|Fredericka+the+Great" rel="stylesheet">
+|Unica+One|Cinzel|Russo+One|Julius+Sans+One|Poiret+One|Pacifico|Anton|Didact+Gothic|Teko|Fredericka+the+Great" rel="stylesheet">
 
   <!--Font awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
