--- a/public/index.html
+++ b/public/index.html
@@ -21,8 +21,7 @@
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
   <!-- Google fonts -->
-  <link href="https://fonts.googleapis.com/css?family=Cinzel+Decorative
-|Unica+One|Cinzel|Russo+One|Julius+Sans+One|Poiret+One|Pacifico|Anton|Didact+Gothic|Teko|Fredericka+the+Great" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Julius+Sans+One|Poiret+One|Didact+Gothic|Teko" rel="stylesheet">
 
   <!--Font awesome-->
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css"
